--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
     <script src="index.js"></script>
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-
+        @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&display=swap');
         * {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'PT Serif', serif;
         }
 
         body {
-            background-image: url("https://media.timeout.com/images/105211701/image.jpg");
+            background-image: url("/omid-armin-b1EVP69Co8M-unsplash.jpg");
             background-position: center;
-
+            overflow: hidden;
             color: white;
         }
 
         .time {
-            font-size: 80px;
+            font-size: 180px;
             font-weight: bold;
+            padding-bottom: 30px;
         }
 
         .greeting {
             font-size: 50px;
+            padding-bottom: 30px;
         }
 
         .todo {
@@ -72,8 +73,8 @@
 <body>
     <div class="main">
         <div id="time" class="time">시간</div>
-        <div class="greeting">Hello!</div>
-        <div class="todo">주 3회 운동하기!</div>
+        <div class="greeting">‪‧˚₊*̥(* ⁰̷̴͈꒳⁰̷̴͈ )‧˚₊*̥‬</div>
+        <div class="todo">오늘 해야 할 일</div>
     </div>
     <div class="quote">
         <div id="author" class="author">- 명언의 저자 -</div>
