--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&display=swap');
+
         * {
             font-family: 'PT Serif', serif;
         }
 
         body {
-            background-image: url("/omid-armin-b1EVP69Co8M-unsplash.jpg");
+            background-image: url("/1.jpg");
             background-position: center;
             overflow: hidden;
             color: white;
@@ -63,7 +64,6 @@
             align-items: center;
             justify-content: center;
         }
-
     </style>
 
     <script>
